<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".profileedit.LegalStatusEdit"
    tools:showIn="@layout/activity_legal_status_edit"
    tools:ignore="MissingPrefix">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="@dimen/dimens_eight_dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.9"
                    android:text="@string/txtYearsInUSA"
                    android:textSize="@dimen/bureau_regular_text_size"
                    fontPath="fonts/Comfortaa-Regular.ttf" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text="@string/txtColon"
                    android:textSize="@dimen/bureau_regular_text_size" />

                <RadioGroup
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/rg_USAResident_edit">

                    <RadioButton
                        style="@style/RadioButton.RadioButton_Verticle_Checked"
                        android:paddingLeft="5dp"
                        android:id="@+id/rd_ZeroToTwoYrs_edit"
                        android:text="@string/txtZeroToTwoYrs"
                        android:textSize="@dimen/bureau_regular_text_size"
                        android:textColor="@drawable/textcolor_selector_radio"
                        fontPath="fonts/Comfortaa-Regular.ttf" />

                    <RadioButton
                        style="@style/RadioButton.RadioButton_Verticle_Unchecked"
                        android:id="@+id/rd_TwoToSixYrs_edit"
                        android:paddingLeft="5dp"
                        android:text="@string/txtTwoToSixYrs"
                        android:textSize="@dimen/bureau_regular_text_size"
                        android:textColor="@drawable/textcolor_selector_radio"
                        fontPath="fonts/Comfortaa-Regular.ttf" />

                    <RadioButton
                        style="@style/RadioButton.RadioButton_Verticle_Unchecked"
                        android:id="@+id/rd_SixPlusYrs_edit"
                        android:paddingLeft="5dp"
                        android:text="@string/txtSixPlusYrs"
                        android:textSize="@dimen/bureau_regular_text_size"
                        android:textColor="@drawable/textcolor_selector_radio"
                        fontPath="fonts/Comfortaa-Regular.ttf" />

                    <RadioButton
                        style="@style/RadioButton.RadioButton_Verticle_Unchecked"
                        android:id="@+id/rd_FromBirth_edit"
                        android:text="@string/txtBornAndRaised"
                        android:textSize="@dimen/bureau_regular_text_size"
                        android:paddingLeft="5dp"
                        android:textColor="@drawable/textcolor_selector_radio"
                        fontPath="fonts/Comfortaa-Regular.ttf" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dimens_thirty_two_dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.9"
                    android:text="@string/txtLegalStatus"
                    android:textSize="@dimen/bureau_regular_text_size"
                    fontPath="fonts/Comfortaa-Regular.ttf" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text="@string/txtColon"
                    android:textSize="@dimen/bureau_regular_text_size" />

                <RadioGroup
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/rg_LegalStatus_edit">

                    <RadioButton
                        style="@style/RadioButton.RadioButton_Verticle_Checked"
                        android:id="@+id/rd_USCitizen_edit"
                        android:text="@string/txtUSACitizen"
                        android:textSize="@dimen/bureau_regular_text_size"
                        android:paddingLeft="5dp"
                        android:textColor="@drawable/textcolor_selector_radio"
                        fontPath="fonts/Comfortaa-Regular.ttf" />

                    <RadioButton
                        style="@style/RadioButton.RadioButton_Verticle_Unchecked"
                        android:id="@+id/rd_Greencard_edit"
                        android:text="@string/txtGreenCard"
                        android:textSize="@dimen/bureau_regular_text_size"
                        android:paddingLeft="5dp"
                        android:textColor="@drawable/textcolor_selector_radio"
                        fontPath="fonts/Comfortaa-Regular.ttf" />

                    <RadioButton
                        style="@style/RadioButton.RadioButton_Verticle_Unchecked"
                        android:id="@+id/rd_GreencardProcessing_edit"
                        android:paddingLeft="5dp"
                        android:text="@string/txtGCProcessing"
                        android:textSize="@dimen/bureau_regular_text_size"
                        android:textColor="@drawable/textcolor_selector_radio"
                        fontPath="fonts/Comfortaa-Regular.ttf" />

                    <RadioButton
                        style="@style/RadioButton.RadioButton_Verticle_Unchecked"
                        android:id="@+id/rd_StudentVisa_edit"
                        android:paddingLeft="5dp"
                        android:text="@string/txtStudentVisa"
                        android:textSize="@dimen/bureau_regular_text_size"
                        android:textColor="@drawable/textcolor_selector_radio"
                        fontPath="fonts/Comfortaa-Regular.ttf" />

                    <RadioButton
                        style="@style/RadioButton.RadioButton_Verticle_Unchecked"
                        android:id="@+id/rd_H1Visa_edit"
                        android:text="@string/txtH1Visa"
                        android:textSize="@dimen/bureau_regular_text_size"
                        android:paddingLeft="5dp"
                        android:textColor="@drawable/textcolor_selector_radio"
                        fontPath="fonts/Comfortaa-Regular.ttf" />

                    <RadioButton
                        style="@style/RadioButton.RadioButton_Verticle_Unchecked"
                        android:id="@+id/rd_Others_edit"
                        android:paddingLeft="5dp"
                        android:text="@string/txtOthers"
                        android:textSize="@dimen/bureau_regular_text_size"
                        android:textColor="@drawable/textcolor_selector_radio"
                        fontPath="fonts/Comfortaa-Regular.ttf" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
