<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.bureau.bureauapp.profilesetup.LegalStatus"
    tools:showIn="@layout/activity_legal_status"
    tools:ignore="MissingPrefix">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/txtYearsInUSA"
                    fontPath="fonts/Comfortaa-Regular.ttf"
                    android:textSize="@dimen/bureau_regular_text_size" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text="@string/txtColon"
                    android:textSize="@dimen/bureau_regular_text_size" />

                <RadioGroup
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/radioGroup_USAResident">

                    <RadioButton
                        style="@style/RadioButton.RadioButton_Verticle_Checked"
                        android:id="@+id/radio_ZeroToTwoYrs"
                        android:text="@string/txtZeroToTwoYrs"
                        android:textSize="@dimen/bureau_regular_text_size"
                        android:paddingLeft="5dp"
                        android:onClick="onYearsInUSClicked"
                        android:textColor="@drawable/textcolor_selector_radio"
                        fontPath="fonts/Comfortaa-Regular.ttf" />

                    <RadioButton
                        style="@style/RadioButton.RadioButton_Verticle_Unchecked"
                        android:id="@+id/radio_TwoToSixYrs"
                        android:text="@string/txtTwoToSixYrs"
                        android:textSize="@dimen/bureau_regular_text_size"
                        android:onClick="onYearsInUSClicked"
                        android:paddingLeft="5dp"
                        android:textColor="@drawable/textcolor_selector_radio"
                        fontPath="fonts/Comfortaa-Regular.ttf" />

                    <RadioButton
                        style="@style/RadioButton.RadioButton_Verticle_Unchecked"
                        android:id="@+id/radio_SixPlusYrs"
                        android:text="@string/txtSixPlusYrs"
                        android:textSize="@dimen/bureau_regular_text_size"
                        android:paddingLeft="5dp"
                        android:onClick="onYearsInUSClicked"
                        android:textColor="@drawable/textcolor_selector_radio"
                        fontPath="fonts/Comfortaa-Regular.ttf" />

                    <RadioButton
                        style="@style/RadioButton.RadioButton_Verticle_Unchecked"
                        android:id="@+id/radio_FromBirth"
                        android:text="@string/txtBornAndRaised"
                        android:textSize="@dimen/bureau_regular_text_size"
                        android:paddingLeft="5dp"
                        android:onClick="onYearsInUSClicked"
                        android:textColor="@drawable/textcolor_selector_radio"
                        fontPath="fonts/Comfortaa-Regular.ttf" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="32dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/txtLegalStatus"
                    android:textSize="@dimen/bureau_regular_text_size"
                    fontPath="fonts/Comfortaa-Regular.ttf" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text="@string/txtColon"
                    android:textSize="@dimen/bureau_regular_text_size" />

                <RadioGroup
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/radioGroup_LegalStatus">

                    <RadioButton
                        style="@style/RadioButton.RadioButton_Verticle_Checked"
                        android:id="@+id/radio_USCitizen"
                        android:text="@string/txtUSACitizen"
                        android:textSize="@dimen/bureau_regular_text_size"
                        android:paddingLeft="5dp"
                        android:onClick="onLegalStatusClicked"
                        android:textColor="@drawable/textcolor_selector_radio"
                        fontPath="fonts/Comfortaa-Regular.ttf" />

                    <RadioButton
                        style="@style/RadioButton.RadioButton_Verticle_Unchecked"
                        android:id="@+id/radio_Greencard"
                        android:text="@string/txtGreenCard"
                        android:textSize="@dimen/bureau_regular_text_size"
                        android:paddingLeft="5dp"
                        android:onClick="onLegalStatusClicked"
                        android:textColor="@drawable/textcolor_selector_radio"
                        fontPath="fonts/Comfortaa-Regular.ttf" />

                    <RadioButton
                        style="@style/RadioButton.RadioButton_Verticle_Unchecked"
                        android:id="@+id/radio_GreencardProcessing"
                        android:text="@string/txtGCProcessing"
                        android:textSize="@dimen/bureau_regular_text_size"
                        android:paddingLeft="5dp"
                        android:onClick="onLegalStatusClicked"
                        android:textColor="@drawable/textcolor_selector_radio"
                        fontPath="fonts/Comfortaa-Regular.ttf" />

                    <RadioButton
                        style="@style/RadioButton.RadioButton_Verticle_Unchecked"
                        android:id="@+id/radio_StudentVisa"
                        android:text="@string/txtStudentVisa"
                        android:textSize="@dimen/bureau_regular_text_size"
                        android:paddingLeft="5dp"
                        android:onClick="onLegalStatusClicked"
                        android:textColor="@drawable/textcolor_selector_radio"
                        fontPath="fonts/Comfortaa-Regular.ttf" />

                    <RadioButton
                        style="@style/RadioButton.RadioButton_Verticle_Unchecked"
                        android:id="@+id/radio_H1Visa"
                        android:paddingLeft="5dp"
                        android:text="@string/txtH1Visa"
                        android:textSize="@dimen/bureau_regular_text_size"
                        android:onClick="onLegalStatusClicked"
                        android:textColor="@drawable/textcolor_selector_radio"
                        fontPath="fonts/Comfortaa-Regular.ttf" />

                    <RadioButton
                        style="@style/RadioButton.RadioButton_Verticle_Unchecked"
                        android:id="@+id/radio_Others"
                        android:paddingLeft="5dp"
                        android:text="@string/txtOthers"
                        android:textSize="@dimen/bureau_regular_text_size"
                        android:onClick="onLegalStatusClicked"
                        android:textColor="@drawable/textcolor_selector_radio"
                        fontPath="fonts/Comfortaa-Regular.ttf" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtFinish"
        android:textSize="@dimen/bureau_title_text_size"
        android:textAllCaps="false"
        android:layout_gravity="bottom"
        android:id="@+id/btn_SaveLegalStatus"
        android:background="@drawable/btn_radio_on"
        android:textColor="@color/cardview_light_background"
        fontPath="fonts/Comfortaa-Regular.ttf" />
</LinearLayout>
