<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".LoginSignup"
    tools:ignore="MissingPrefix">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/img_background"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@drawable/img_logo"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="61dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_welcome"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/activity_horizontal_margin"
            android:id="@+id/welcome_text_view"
            style="@style/Welcome_Splash" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_theBureau"
            android:id="@+id/bureau_text_view"
            style="@style/TheBureau_Splash"
            android:layout_below="@+id/welcome_text_view"
            android:layout_centerHorizontal="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_above="@+id/ll_buttons">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_NewUsers"
                android:textColor="#ffffff"
                android:textAlignment="center"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                fontPath="fonts/Comfortaa-Regular.ttf" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_Existing"
                android:textColor="#ffffff"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                fontPath="fonts/Comfortaa-Regular.ttf" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_Signup"
                android:textColor="#ffffff"
                android:textAllCaps="false"
                android:id="@+id/button_signup"
                android:background="@drawable/btn_red"
                android:layout_marginBottom="20dp"
                android:textSize="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                fontPath="fonts/Comfortaa-Bold.ttf" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/button_login"
                android:text="@string/label_login"
                android:textColor="#ffffff"
                android:textAllCaps="false"
                android:background="@drawable/btn_blue"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="32dp"
                android:textSize="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                fontPath="fonts/Comfortaa-Bold.ttf" />
        </LinearLayout>
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
